solved, biggest takeaway is margin can be used to stretch the width

--- a/style.css
+++ b/style.css
@@ -10,3 +10,66 @@ body {
 }
 
 /* Add styles here! */
+
+h1,
+h2,
+p {
+  margin: 0;
+}
+
+.max-width-wrapper {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.title {
+  margin-top: 96px;
+  margin-bottom: 3rem;
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 1.2;
+}
+
+.intro-chunk {
+  max-width: 400px;
+  margin-bottom: 4rem;
+  padding: 0 24px;
+}
+header {
+  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+}
+
+p {
+  font-size: 1.25rem;
+  line-height: 1.5;
+  font-weight: 400;
+  margin: 1rem 0;
+}
+
+p:last-child {
+  margin-bottom: 0;
+}
+
+strong {
+  color: hsla(160, 100%, 30%, 1);
+}
+
+main {
+  background-color: hsla(0, 0%, 40%, 1);
+  padding: 64px 0;
+}
+
+.card {
+  background-color: white;
+  padding: 24px;
+  border-bottom: 8px solid hsla(0, 0%, 60%, 1);
+}
+
+h2 {
+  background-color: hsla(45, 100%, 50%, 1);
+  border-bottom: 8px solid hsla(45, 100%, 40%, 1);
+  width: fit-content;
+  padding: 16px 32px;
+  margin-left: -32px;
+  font-size: 1.5rem;
+}
